--- a/workspaces/e2e/tests/html-content/html-content.html
+++ b/workspaces/e2e/tests/html-content/html-content.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/tests/reset.css" />
     <link
       rel="stylesheet"
-      href="/node_modules/@insihts/workflow/node_modules/@insihts/workflow/css.min/flows.css"
+      href="/node_modules/@oppla-ai/flows/node_modules/@oppla-ai/flows/css.min/flows.css"
     />
   </head>
   <body>
